using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class MD_Acessibilidades
	{
		private int tamanhoFonte;

		private boolean altoContraste;

		private MD_Alunos mD_Alunos;

	}

}

