using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class MD_Admin
	{
		private MD_Usuarios mD_Usuarios;

		///  
		public void gerenciarAcesso()
		{

		}

	}

}

