using System.Collections.Generic;
using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class MD_Agente_Especialista_IA
	{
		private ICollection<MD_Duvidas> mD_Duvidas;

		///  
		public boolean responderDuvida(MD_Duvidas duvida)
		{
			return false;
		}

	}

}

