using 2. Class Diagram Nex_TI;
using System.Collections.Generic;

namespace 2. Class Diagram Nex_TI
{
	public class MD_Alunos : MD_Usuarios
	{
		private int pontos;

		private int moedas;

		private float progresso;

		private MD_Usuarios mD_Usuarios;

		private ICollection<MD_Duvidas> mD_Duvidas;

		private MD_Acessibilidades mD_Acessibilidades;

		private ICollection<MD_Simulado> mD_Simulado;

		private MD_Modulos mD_Modulos;

		///  
		public void estudarFlashcards()
		{

		}

		///  
		public void realizarSimulado()
		{

		}

		///  
		public void visualizarProgresso()
		{

		}

		///  
		public void definirFaseInicial(float nota)
		{

		}

	}

}

