using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class MD_Duvidas
	{
		private string descricao;

		private MD_Tutor mD_Tutor;

		private MD_Alunos mD_Alunos;

		private MD_Agente_Especialista_IA mD_Agente_Especialista_IA;

	}

}

