using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class MD_Fases
	{
		private int id;

		private string nome;

		private MD_Modulos mD_Modulos;

		private MD_Flashcards mD_Flashcards;

	}

}

