using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class MD_Flashcards
	{
		private int id;

		private string pergunta;

		private string resposta;

		private string dica;

		private int dataProximaRevisao;

		private int nivelDificuldade;

		private MD_Fases mD_Fases;

	}

}

