using 2. Class Diagram Nex_TI;
using System.Collections.Generic;

namespace 2. Class Diagram Nex_TI
{
	public class MD_Modulos
	{
		private int id;

		private string nome;

		private MD_Alunos mD_Alunos;

		private ICollection<MD_Fases> mD_Fases;

	}

}

