using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class MD_Simulado
	{
		private int id;

		private float nota;

		private int dataRealizacao;

		private MD_Alunos mD_Alunos;

	}

}

