using 2. Class Diagram Nex_TI;
using System.Collections.Generic;

namespace 2. Class Diagram Nex_TI
{
	public class MD_Tutor
	{
		public int acompanharDesempenho ();

		public int gerenciarConteudo();

		private MD_Usuarios mD_Usuarios;

		private ICollection<MD_Duvidas> mD_Duvidas;

	}

}

