using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class MD_Usuarios
	{
		private int id;

		private string nome;

		private string email;

		private string senha;

		private MD_Admin mD_Admin;

		private MD_Tutor mD_Tutor;

		private MD_Alunos mD_Alunos;

		///  
		public void login()
		{

		}

	}

}

